# TakeNote

./: .gitignore  README.md  build.gradle  chrisaliang.7z  chrisaliang.keystore  debug.keystore  gradle.properties  mind.md  uaes-baic-android.jks
.py/: complete_clean_architecture.7z  download_pdf.py  getUrl.py
app/: build.gradle  google-services.json
app/src/androidTest/java/com/chris/eban/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/chris/takenote/: ExampleInstrumentedTest.kt
app/src/http/java/com/chris/eban/: NetModule.java  NetModule.kt  RepositoryModule.java  RepositoryModule.kt
app/src/http/java/com/chris/takenote/: NetModule.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/p7zip/: 7zTypes.h  com_chris_eban_common_ZipUtils.h  p7zip.cpp
app/src/main/cpp/p7zip/CPP/7zip/Common/: CreateCoder.h
app/src/main/java/com/chris/eban/: AndroidComponentModule.java  AndroidComponentModule.kt  App.java  App.kt  AppComponent.java  AppComponent.kt  DataBindingAdapter.java  DataBindingAdapter.kt  JsonModule.java  JsonModule.kt  MainActivity.kt  MainFragment.kt  MainViewModel.kt  PersistentModule.java  PersistentModule.kt  ProgressView.java  SchedulerModule.java  SchedulerModule.kt  UseCaseModule.java  UseCaseModule.kt  ViewModelModule.java  ViewModelModule.kt
app/src/main/java/com/chris/eban/common/: BitmapUtils.java  CameraImageGraphic.java  CameraSource.java  CameraSourcePreview.java  EBanViewModelProviderFactory.java  EBanViewModelProviderFactory.kt  EventListItemDecoration.java  FrameMetadata.java  GraphicOverlay.java  LeonView.java  PinEditTextView.kt  ProgressView.java  VisionImageProcessor.java  ZipProcess.java  ZipUtils.java
app/src/main/java/com/chris/eban/common/demo/: DemoProgressView.java  DriverManagerProgressView.java  SwitchView.java
app/src/main/java/com/chris/eban/data/: AppDatabase.java  AppDatabase.kt  DataEvent.kt  Event.java  Event.kt  EventDao.java  EventDao.kt  EventListRepositoryImpl.java  EventListRepositoryImpl.kt  EventMapper.java  EventMapper.kt  Person.java  Person.kt  RoomTypeConverters.java  RoomTypeConverters.kt  Tables.java  Tables.kt
app/src/main/java/com/chris/eban/data/http/: GankApi.kt  HttpLogger.kt
app/src/main/java/com/chris/eban/data/pojo/: Beauty.kt  CommonResult.kt
app/src/main/java/com/chris/eban/demo/: DemoProgressView.java  DriverManagerProgressView.java  SwitchView.java
app/src/main/java/com/chris/eban/domain/: EventListRepository.java  EventListRepository.kt  Interactor.java  Interactor.kt  JobThread.java  JobThread.kt  Result.java  Result.kt  ResultException.java  ResultException.kt  SingleUseCase.java  SingleUseCase.kt
app/src/main/java/com/chris/eban/domain/entity/: DMEventListItem.java  DMEventListItem.kt
app/src/main/java/com/chris/eban/domain/usecase/: EventItemQuery.kt  EventListQuery.java  EventListQuery.kt  EventSave.java  EventSaveDelete.java  EventSaveDelete.kt  EventSaveInsert.java  EventSaveInsert.kt  EventSaveUpdate.java  EventSaveUpdate.kt
app/src/main/java/com/chris/eban/presenter/: ArActivity.kt  BaseActivity.java  BaseActivity.kt  BaseFragment.kt  CameraXActivity.kt  CreateEventActivity.java  CreateEventActivity.kt  CreateEventViewModel.java  EventDetailActivity.java  EventItem.java  EventListAdapter.java  EventListFragment.java  EventListMapper.java  EventListViewModel.java  FaceDetectActivity.kt  MainActivity.kt  MainFragment.kt  MainViewModel.kt  ManagerFragment.kt  ZipActivity.kt
app/src/main/java/com/chris/eban/presenter/event/: EventDetailActivity.java  EventDetailActivity.kt  EventDetailViewModel.java  EventDetailViewModel.kt  EventItem.java  EventItem.kt  EventListAdapter.java  EventListAdapter.kt  EventListFragment.java  EventListFragment.kt  EventListMapper.java  EventListMapper.kt  EventListViewModel.java  EventListViewModel.kt
app/src/main/java/com/chris/eban/presenter/face/: FaceContourDetectorProcessor.kt  FaceContourGraphic.kt  FaceDetectActivity.kt  FaceDetectionProcessor.kt  FaceGraphic.kt  VisionProcessorBase.kt
app/src/main/java/com/chris/eban/presenter/gallery/: GalleryAdapter.kt  GalleryFragment.kt  GalleryViewModel.kt
app/src/main/java/com/chris/eban/presenter/slide/: SlideShowFragment.kt  SlideShowViewModel.kt
app/src/main/java/com/chris/takenote/: App.java  AppComponent.java  JsonModule.java  MainActivity.kt  ProgressView.java
app/src/main/java/com/chris/takenote/data/: GankApi.java  HttpLogger.kt
app/src/main/java/com/chris/takenote/data/http/: GankApi.java  HttpLogger.kt
app/src/main/java/com/chris/takenote/data/pojo/: Beauty.java  Beauty.kt
app/src/main/java/com/chris/takenote/demo/: DemoProgressView.java  SwitchView.java
app/src/main/res/drawable/: shape_bg.xml  shape_selector_key.xml
app/src/main/res/layout/: activity_ar.xml  activity_create_event.xml  activity_event_detail.xml  activity_face_detect.xml  activity_main.xml  activity_zip.xml  app_bar_main.xml  content_main.xml  fragment_event_list.xml  fragment_gallery.xml  fragment_main.xml  fragment_manager.xml  item_event_list.xml  item_slide_gallery.xml  layout_calculate.xml  layout_fragment.xml  layout_new_event.xml  slide_show_fragment.xml
app/src/main/res/menu/: bottom_nav_menu.xml  create.xml  event_save.xml
app/src/main/res/navigation/: main_menu_navigation.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: fragment_manager_scene.xml
app/src/main/res_main/drawable-xhdpi/: event_class_normal.xml
app/src/main/res_main/layout/: main_item_main.xml  main_item_mian.xml
app/src/main/res_main/values/: strings.xml
app/src/mock/java/com/chris/eban/: NetModule.kt
app/src/test/java/com/chris/eban/: ExampleUnitTest.kt
app/src/test/java/com/chris/takenote/: ExampleUnitTest.kt
app/src/tst/java/com/chris/eban/: ServiceEnvironmentConfig.java  ServiceEnvironmentConfig.kt
app/src/tst/java/com/chris/takenote/: ServiceEnvironmentConfig.java
gradle/wrapper/: gradle-wrapper.properties
